<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:orderInCategory="0"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_stationery"
            android:icon="@drawable/ic_menu_stationery"
            android:orderInCategory="1"
            android:title="@string/action_stationery" />
        <item
            android:id="@+id/nav_retrieve"
            android:icon="@drawable/ic_menu_retrieval"
            android:orderInCategory="2"
            android:title="@string/action_retrieve" />
        <item
            android:id="@+id/nav_disbursement"
            android:icon="@drawable/ic_menu_disbursement"
            android:orderInCategory="3"
            android:title="@string/action_disbursement" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:orderInCategory="4"
            android:title="@string/action_logout" />
    </group>

</menu>
