<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:orderInCategory="0"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_pendingreq"
            android:icon="@drawable/ic_menu_list"
            android:orderInCategory="1"
            android:title="@string/action_pending_req" />
        <item
            android:id="@+id/nav_myreq"
            android:icon="@drawable/ic_menu_my_list"
            android:orderInCategory="2"
            android:title="@string/action_myreq" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:orderInCategory="3"
            android:title="@string/action_logout" />
    </group>

</menu>
