<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:labelFor="@+id/number_text"
        android:text="@string/input_quantity_text"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/remove_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/ic_remove_circle"
            android:contentDescription="@string/remove_text" />

        <EditText
            android:id="@id/number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:text="@string/zero_number"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_add_circle"
            android:contentDescription="@string/add_text" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/reason_text"
        android:text="@string/reason_required_text"
        android:textSize="26sp" />

    <EditText
        android:id="@id/reason_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/ok_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_text" />
    </LinearLayout>

</LinearLayout>