<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detailsscreen.ScanQRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/disbursment_id_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/retry_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_retry" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/qr_scanner"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stationery_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty_to_collect_text"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dis_detail_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/row_detail_req">

    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/confirm_button_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="3dp"
        android:background="@color/colorGreen">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/confirm_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_confirm_received"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>
